Fix adding physical divisions